🩹 Fix scrollbar color

--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -27,7 +27,7 @@
 }
 
 ::selection {
-  background-color: none;
+  background-color: transparent;
   color: var(--colors-primary);
 }
 
@@ -36,6 +36,7 @@ body {
   font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   scroll-behavior: smooth;
+  scrollbar-color: rgb(86, 134, 245) #f2f2f205;
 }
 
 body {
@@ -43,7 +44,6 @@ body {
   width: 100%;
   background: var(--colors-background);
   color: var(--colors-text);
-  scrollbar-color: rgb(86, 134, 245) #f2f2f205;
 }
 
 a {
